--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   header {
     background-color: #a5b0b1;
     margin-bottom: 40px;
-    background-image: url(/photos/background.jpg);
+    background-image: url(photos/background.jpg);
 
   }
   
