--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 body {
     margin: 0;
     font-family: Helvetica, Arial, sans-serif;
-    background-image: url(/photos/background.jpg);
+    background-image: url(photos/background.jpg);
   }
   
   header {
